# IRIS

./: .gitignore  CHANGELOG.md  Cargo.toml
docs/: arc-agi-3-notes.md  failed_experiments.md  next-steps.md  phase-e-batched-lanes.md  phase-f-fork-join.md  phase-m6-learnable-reward.md  phase-m7-approach-reward.md
examples/: acrobot.rs  mountain_car.rs
kindle/: Cargo.toml
kindle-gym/: Cargo.toml
kindle-gym/examples/: l1_alpha_sweep.rs  l1_diagnostic.rs  l1_long.rs  stability_1m.rs  taxi_credit_probe.rs  wm_probe.rs
kindle/src/: adapter.rs  agent.rs  approach.rs  buffer.rs  delta_goals.rs  diayn.rs  encoder.rs  lib.rs  option.rs  outcome.rs  policy.rs  world_model.rs
python/: Cargo.toml
python/examples/: a2c_control.py  arc_agi3_batch.py  atari_batch.py  gym_extrinsic.py  lander_buffer_probe.py  lunar_lander_batch.py  lunar_lander_ppo.py
python/src/: lib.rs
src/: agent.rs
src/envs/: acrobot.rs  mod.rs  mountain_car.rs
