[workspace]
resolver = "2"
members = ["kindle", "kindle-gym"]
# `python` is an independent maturin-built cdylib (pyo3 extension module).
# It isn't part of the `cargo build --workspace` flow because the
# `extension-module` feature requires linking against libpython.
exclude = ["python"]

# To override meganeura with a local checkout for development, add:
# [patch."https://github.com/kvark/meganeura"]
# meganeura = { path = "../meganeura" }
# Do not commit this — kindle/Cargo.toml's pinned rev must always
# resolve cleanly on CI.
